<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_editar_quad"
        android:title="Editar" />
    <item
        android:id="@+id/action_eliminar_quad"
        android:title="Eliminar" />
</menu>
